model/nginx/k8s-deployment-nginx.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 5
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app: nginx
    spec:
      containers:
      - name: nginx 
        image: nginx:1.26.3 
        imagePullPolicy: "Always"
        volumeMounts:
      volumes:
